# bazel-test

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  browser_repositories.bzl  gulpfile.js  karma.conf.js  package-lock.json  package.json
main/core/: BUILD.bazel  package.json
main/core/src/a/: BUILD.bazel  a.spec.ts  a.ts
main/core/src/b/: b.spec.ts
main/core/src/c/: BUILD.bazel
scripts/: copy.sh  server.js
src/: BUILD.bazel  feature.ts  index.ts
src/a/: BUILD.bazel  a.spec.ts  a.ts
src/b/: BUILD.bazel  b.ts
src/c/: BUILD.bazel  c.ts
subproject/: BUILD.bazel  WORKSPACE  package-lock.json  package.json  tsconfig.json
