load("@npm_bazel_typescript//:index.bzl", "ts_config")

exports_files(
    [
        "tsconfig.json",
        "karma.conf.js",
    ],
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig-test",
    src = "tsconfig-test.json",
    visibility = ["//visibility:public"],
    deps = [":tsconfig.json"],
)
