package(default_visibility = ["//visibility:private"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "core",
    srcs = ["index.ts"],
    deps = [
        "//main/core/src/a",
        "//main/core/src/b",
        "//main/core/src/c",
    ],
)

rollup_bundle(
    name = "bundle",
    srcs = [
    ],
    entry_point = "main/core/index",
    deps = [
        ":core",
    ],
)

filegroup(
    name = "bundle.umd",
    srcs = [
        ":bundle",
    ],
    output_group = "es5_umd_min",
)

npm_package(
    name = "npm_package",
    srcs = ["package.json"],
    replacements = {"bazel_test/main/core/": ""},
    deps = [
        ":bundle.umd",
        ":core",
    ],
)
