package(default_visibility = ["//visibility:private"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")

ts_library(
    name = "a",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    visibility = ["//:__subpackages__"],
    deps = [
        "//main/core/src/b",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    tsconfig = "//:tsconfig-test",
    deps = [
        ":a",
        "@npm//@types/jasmine",
    ],
)

ts_web_test_suite(
    name = "test",
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    deps = [
        ":test_lib",
    ],
)
